intel/bench_214_new/extr_.reactossdklib3rdpartylibxml2uri.c_xmlNormalizeURIPath_with_main/log.txt
bench_214_new/extr_.reactossdklib3rdpartylibxml2uri.c_xmlNormalizeURIPath_with_main/extr_.reactossdklib3rdpartylibxml2uri.c_xmlNormalizeURIPath_with_main.c:18:17: error: use of undeclared identifier 'NULL'
    if (path == NULL)
                ^
1 error generated.
HLS FPGA Parse FAILED.
